--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
      <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-    tailwind.config = {
-        theme: { 
-        extend: {
-            fontFamily: {
-                        poppins: ['Poppins', 'sans-serif'],
-                        }
-        }
-        }
-    }
-    </script>
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
+<body class="bg-blue-900 p-8 ">
+        <div class=" flex justify-center text-white text-4xl font-bold">WeatherSnap 🌦️</div>
 
+        <section class="flex justify-center items-center mt-12">
+            <input type="text" id="nomeCidade" placeholder="Digite o nome da Cidade" class="p-2 w-1/3 border border-gray rounded-lg mr-5">
+            <button class="bg-blue-100 p-2 border-gray rounded-lg">Pesquisar</button>
+        </section>
+
+        <section class="bg-blue-100 p-8 mt-12 w-1/2 border-gray rounded-lg mx-auto ">
+        <div id="cidade" class="text-2xl"></div>
+        <div id="temperatura" class="mt-5 text-5xl"></div>
+    </section>
+    
 
 
 
